updating index.html

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 			<div class="three wide column">
 			  <h4 class="ui inverted header">Contact us</h4>
 			  <div class="ui inverted link list">
-				<a href="mailto:expressive.harbinger@gmail.com" class="item">Email</a>
+				<a href="mailto:crew@icslab.eu" class="item">Email</a>
 				<a href="skype:georgi_mania?call" class="item">Skype</a>
 				<a href="tel:+40746315293" class="item">Phone</a>
 			  </div>
@@ -421,7 +421,7 @@
 			<!--message -->
 			<div class="seven wide column">
 				<!-- <h4 class="ui inverted header">Footer Header</h4>-->
-				<p>Do whatever you want when you want to. [TODO]</p>
+				<p>Independent Computer Scientists' Laboratory</p>
 			</div>
 			</div>
 		</div>
@@ -429,7 +429,7 @@
 		<!-- copyright -->
 		<div class="ui container">
 			<br/>
-			<i class="copyright icon"></i>2016 [TODO] add name
+			<i class="copyright icon"></i>2016 Inependent Computer Science Laboratory
 		</div>
 	</div><!-- (end footer) -->
 	
