updating index.html

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 			<div class="ui text container">
 				<!--<h2><a href="http://blog.icslab.eu">Blink</a></h2>-->
 				<button class="ui inverted teal button"
-							onclick="location.href='blog.icslab.eu';">
+							onclick="location.href='https://blog.icslab.eu';">
 					<h2 style="color:#24123d;">Blink</h2>
 				</button>
             </div>
