updating index.html

--- a/index.html
+++ b/index.html
@@ -86,13 +86,16 @@
 
 				<!-- lh menu items -->
 				<a class="item">
-				<img class="ui small image" src="assets/images/wireframe/image.png">
+					<div>
+						<img class="ui small image" src="assets/images/wireframe/image.png">
+						<h3>icslab.eu</h3>
+					</div>
 				</a>
 <!--
 				<div class="ui small primary button">Get Started[TODO] <i class="right arrow icon"></i></div>
--->
+
 				<a class="item">ICS Laboratory</a>
-        
+-->       
 				<!--rh menu items-->
 				<div class="right item">
 					<a href="#ourwork" class="item">Our work</a>
@@ -347,7 +350,7 @@
 			<div class="ui text container">
 				<!--<h2><a href="http://blog.icslab.eu">Blink</a></h2>-->
 				<button class="ui inverted teal button"
-							onclick="location.href='https://blog.icslab.eu';">
+							onclick="location.href='blog';">
 					<h2 style="color:#24123d;">Blink</h2>
 				</button>
             </div>
