update mail adr & github link

--- a/index.html
+++ b/index.html
@@ -320,8 +320,8 @@
 		<!-- team contacts -->
 		<div>
 			<button class="ui email tiny icon button"
-					title="mailto:expressive.harbinger@gmail.com"
-					onclick="location.href='mailto:expressive.harbinger@gmail.com';">
+					title="mailto:crew@icslab.eu"
+					onclick="location.href='mailto:crew@icslab.eu';">
 				<i class="mail icon"></i>
 				Email
 			</button>
@@ -337,9 +337,10 @@
 				<i class="phone icon"></i>  
 				Phone
 			</button>
-			<button class="ui gitlab tiny icon button"
-					title="https://gitlab.com/groups/expressiveharbinger"
-					onclick="location.href='https://gitlab.com/groups/expressiveharbinger';">
+			<button class="ui github tiny icon button"
+					title="https://github.com/icslabspace"
+					onclick="location.href='https://github.com/icslabspace';">
+                <i class="github icon"></i>  
 				GitHub
 			</button>
           </div>
