post hireus form

--- a/hireus.html
+++ b/hireus.html
@@ -54,8 +54,7 @@
 		<div class="ui container" style="width:50%;">
             <form class="ui fluid form" 
                   onsubmit="return validateAndSubmit()" 
-                  action="http://formspree.io/icslabcrew@gmail.com"
-                  method="post">
+                  action="http://formspree.io/icslabcrew@gmail.com">
 
                 <input type="hidden" name="_subject" value="New request to hire icslab team!" />
                 
