post hireus form

--- a/hireus.html
+++ b/hireus.html
@@ -68,7 +68,7 @@
 
 <!--                EMAIL -->
                 <div class="required inline field">
-                    <input type="text" name="_replyto" placeholder="Email" id="email">
+                    <input type="text" name="email" placeholder="Email" id="email">
                     <div class="ui left pointing red basic label" id="email_error" style="visibility:hidden;">
                     </div>
                 </div>
