return page after submit form

--- a/hireus.html
+++ b/hireus.html
@@ -58,6 +58,7 @@
                   method="POST">
 
                 <input type="hidden" name="_subject" value="New request to hire icslab team!" />
+                <input type="hidden" name="_next" value="//icslab.eu" />
                 
 <!--                NAME-->
                 <div class="required inline field">
