return page after submit form

--- a/hireus.html
+++ b/hireus.html
@@ -58,7 +58,7 @@
                   method="POST">
 
                 <input type="hidden" name="_subject" value="New request to hire icslab team!" />
-                <input type="hidden" name="_next" value="//icslab.eu" />
+                <input type="hidden" name="_next" value="http://www.icslab.eu" />
                 
 <!--                NAME-->
                 <div class="required inline field">
