--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
   <!-- Site Properties -->
-  <title>Main Team Site</title>
+  <title>Independent Computer Science Laboratory</title>
   <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.css">
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/reset.css">
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/site.css">
@@ -433,7 +433,7 @@
 		<!-- copyright -->
 		<div class="ui container">
 			<br/>
-			<i class="copyright icon"></i>2016 Inependent Computer Science Laboratory
+			<i class="copyright icon"></i>2016 Independent Computer Science Laboratory
 		</div>
 	</div><!-- (end footer) -->
 	
