--- a/hireus.html
+++ b/hireus.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=4.0, user-scalable=1">
 
     <!-- Site Properties -->
-  <title>Hire Us!</title>
+  <title>Independent Computer Science Laboratory - Hire Us!</title>
   <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.css">
  
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/container.css">
