new art and logo

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				<!-- lh menu items -->
 				<a class="item">
 					<div>
-						<img class="ui small image" src="assets/images/wireframe/image.png">
+						<img class="ui small image" src="assets/images/logo-1.png">
 						<h3>icslab.eu</h3>
 					</div>
 				</a>
