--- a/index.html
+++ b/index.html
@@ -249,12 +249,12 @@
             <div class="ui two column middle aligned grid">
 				<!-- column area -->
                 <div class="center aligned column">
-                  <!--  <div class="column">
-                        <div class="ui image">
-                            <img class="ui tiny circular image" src="images/alex.png"/>
-                        </div>
+					<div class="column">
+						<div class="ui image">
+							<img class="ui tiny circular image" src="images/0a53-alex-gherega_424242.jpg"/>
+						</div>
                     </div>
-                  -->  
+                 
                     <div class="center aligned column">
                        <h3>Alexandru Gherega</h3>
                     </div>
@@ -281,12 +281,12 @@
 
 				<!-- column area -->
                 <div class="center aligned column">
-               <!--     <div class="center aligned column">
-                        <div class="ui image">
-                            <img class="ui tiny circular image" src="images/georgiana.png"/>
-                        </div>
-                    </div>
-                   --> 
+					<div class="center aligned column">
+						<div class="ui image">
+							<img class="ui tiny circular image" src="images/0a53-georgiana_4242.png"/>
+						</div>
+					</div>
+                   
                     <div class="center aligned column">
                         <h3>Georgiana Mania</h3>
                     </div>
