update blog, resize my pic

--- a/hireus.html
+++ b/hireus.html
@@ -88,7 +88,7 @@
 
 <!--                BUDGET-->
                 <div class="required inline field">
-                    <input type="text" name="budget" placeholder="Bugdet" id="budget">
+                    <input type="text" name="budget" placeholder="Budget" id="budget">
                     <div class="ui left pointing red basic label" id="budget_error" style="visibility:hidden;">
                     </div>
                 </div>
