refactor blog menu

--- a/index.html
+++ b/index.html
@@ -349,11 +349,13 @@
 		<!-- team blog -->
         <div class="ui secondary vertical center aligned segment">
 			<div class="ui text container">
+<!--
 				<button class="ui inverted teal button"
 									onclick="location.href='blog';">
 					<img class="ui tiny image" src="assets/images/blogcast-2.png">
-					<!--<h2 style="color:#24123d;">link</h2>-->
+					<h2 style="color:#24123d;">link</h2>
 				</button>
+-->
 							
 				<button class="ui inverted teal button"
 									onclick="location.href='blog';">
