--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  
+  <link rel="icon" type="image/png" href="assets/images/tiny-logo-fav.png" />
 
   <!-- Site Properties -->
   <title>Independent Computer Science Laboratory</title>
@@ -348,6 +350,7 @@
     
 		<!-- team blog -->
         <div class="ui secondary vertical center aligned segment">
+			<img class="fullscreen" src="assets/images/blog-icon.png"/>
 			<div class="ui text container">
 <!--
 				<button class="ui inverted teal button"
