comment out the code

--- a/index.html
+++ b/index.html
@@ -349,12 +349,14 @@
         </div>
     
 		<!-- team blog -->
-        <div class="ui secondary vertical center aligned segment" 
+        <div class="ui secondary vertical center aligned segment" >
+<!--      uncomment to add background image
              style="background-image: url(images/moneyspenk-logo.png); 
                     background-repeat: no-repeat; 
                     height:auto; 
                     width:auto; 
                     background-position: left top;">
+-->
 			<div class="ui text container">
 <!--
 				<button class="ui inverted teal button"
