zoom out 25% banner

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 		<!-- team blog -->
         <div class="ui secondary orange vertical center aligned segment"
              style="padding: 3rem 0 3rem 0;
-					background-image: url(assets/images/blog-section-bg5.png); 
+					background-image: url(assets/images/blog-section-bg6.png); 
                     background-repeat: no-repeat; 
                     height:auto; 
                     width:auto; 
@@ -369,7 +369,7 @@
 				<button class="ui inverted teal button"
 									onclick="location.href='blog';"
                                      >
-					<img class="ui mini image" src="assets/images/blogcast.png">
+					<img class="ui tiny image" src="assets/images/blogcast.png">
 					<!--<h2 style="color:#24123d;">link</h2>--> 
 				</button>
 				
