--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                     background-repeat: no-repeat; 
                     height:auto; 
                     width:auto; 
-                    background-position: left top;>
+                    background-position: left top;">
 
 			<div class="ui text container">
 <!--
