our work section: revised & prettify

--- a/index.html
+++ b/index.html
@@ -55,6 +55,20 @@
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/transition.css">
   <link rel="stylesheet" type="text/css" href="assets/library/das-site.css">
 
+<!--
+
+	<style>
+		@font-face {
+			font-family: handwriting;
+			src: url('assets/fonts/AnnieUseYourTelescope.ttf');
+	
+			font-family:thinfont;
+			src: url('assets/fonts/AdventPro-Light.ttf');
+		}
+	</style>
+
+-->
+
  
   <script src="assets/library/jquery.min.js"></script>
   <script src="semantic/dist/components/visibility.js"></script>
@@ -133,6 +147,79 @@
 			</div>
         </div>
             
+        <h3 class="ui section divider">
+			<div class="ui teal large label">
+				<!--img src="/images/avatar/small/veronika.jpg"-->
+					OUR MISSION
+			</div>	
+		</h3>
+
+		<div class="ui center aligned container" style="margin-bottom: 0px">
+			<div class="ui text container">
+			<!--<div style="-webkit-font-smoothing: antialiased;font-weight: lighter; font-size:20px;
+						font-family:handwriting;">
+				<span style="color:dodgerblue">Clean</span>
+				.
+				<span style="color:forestgreen">Green</span>
+				.
+				<span style="color:indigo">Focused</span>
+				.
+				<span style="color:indigo">Innovative</span>
+				.
+				<span style="color:indigo">Engineering</span>
+				<!--
+				<span style="color:deepskyblue">Clean</span>
+				.
+				<span style="color:limegreen">Green</span>
+				.
+				<span style="color:orangered">Focused</span>
+				.
+				<span style="color:indigo">Innovative</span>
+				.
+				<span style="color:steelblue">Engineering</span>
+				->
+			</div> -->
+			
+			<h2 style="-webkit-font-smoothing: antialiased;font-weight: lighter; font-size:25px;
+						font-family: thinfont;">
+				<span style="color:teal">Clean</span>
+				.
+				<span style="color:teal">Green</span>
+				.
+				<span style="color:teal">Focused</span>
+				.
+				<span style="color:teal">Innovative</span>
+				.
+				<span style="color:teal">Engineering</span>
+				<!--
+				<span style="color:deepskyblue">Clean</span>
+				.
+				<span style="color:limegreen">Green</span>
+				.
+				<span style="color:orangered">Focused</span>
+				.
+				<span style="color:indigo">Innovative</span>
+				.
+				<span style="color:steelblue">Engineering</span>
+				-->
+			</h2	>
+			</div>	
+		</div>
+		
+		<div class="ui hidden divider"></div>
+		<div class="ui left aligent text container">
+			The icslab.eu team focuses it's energy on being creative and inovative in its field 
+			while harnasing and embracing new technologies and producing the smallest footprints on the environment.
+			We like to hear the words: math, physics, AI, intelligent harware and sensors, hybrid.
+			</div>
+			
+		<h3 class="ui section divider">
+			<a class="ui purple large label">
+				RECENT ENDEVOURS
+			</a>
+			
+		</h3>
+
         <!-- section content -->
         <!-- :MONEY-SPENk APP: https://play.google.com/store/apps/details?id=com.harbinger.expressive.espendingtracker -->
 		<div class="ui secondary vertical center aligned segment">
