--- a/index.html
+++ b/index.html
@@ -55,26 +55,23 @@
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/transition.css">
   <link rel="stylesheet" type="text/css" href="assets/library/das-site.css">
 
-<!--
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-	<style>
-		@font-face {
-			font-family: handwriting;
-			src: url('assets/fonts/AnnieUseYourTelescope.ttf');
-	
-			font-family:thinfont;
-			src: url('assets/fonts/AdventPro-Light.ttf');
-		}
-	</style>
+	  ga('create', 'UA-82620816-1', 'auto');
+	  ga('send', 'pageview');
 
--->
-
+	</script>
  
   <script src="assets/library/jquery.min.js"></script>
   <script src="semantic/dist/components/visibility.js"></script>
   <script src="semantic/dist/components/sidebar.js"></script>
   <script src="semantic/dist/components/transition.js"></script>
   <script src="assets/library/das-site.js"></script>
+  
 </head>
 <body>
 
@@ -107,11 +104,7 @@
 						<h3>icslab.eu</h3>
 					</div>
 				</a>
-<!--
-				<div class="ui small primary button">Get Started[TODO] <i class="right arrow icon"></i></div>
-
-				<a class="item">ICS Laboratory</a>
--->       
+  
 				<!--rh menu items-->
 				<div class="right item">
 					<a href="#ourwork" class="item">Our work</a>
@@ -156,29 +149,6 @@
 
 		<div class="ui center aligned container" style="margin-bottom: 0px">
 			<div class="ui text container">
-			<!--<div style="-webkit-font-smoothing: antialiased;font-weight: lighter; font-size:20px;
-						font-family:handwriting;">
-				<span style="color:dodgerblue">Clean</span>
-				.
-				<span style="color:forestgreen">Green</span>
-				.
-				<span style="color:indigo">Focused</span>
-				.
-				<span style="color:indigo">Innovative</span>
-				.
-				<span style="color:indigo">Engineering</span>
-				<!--
-				<span style="color:deepskyblue">Clean</span>
-				.
-				<span style="color:limegreen">Green</span>
-				.
-				<span style="color:orangered">Focused</span>
-				.
-				<span style="color:indigo">Innovative</span>
-				.
-				<span style="color:steelblue">Engineering</span>
-				->
-			</div> -->
 			
 			<h2 style="-webkit-font-smoothing: antialiased;font-weight: lighter; font-size:25px;
 						font-family: thinfont;">
