--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 		
 		<div class="ui hidden divider"></div>
 		<div class="ui left aligent text container">
-			The icslab.eu team focuses it's energy on being creative and inovative in its field 
+			The icslab.eu team focuses it's energy on being creative and innovative in its field 
 			while harnasing and embracing new technologies and producing the smallest footprints on the environment.
 			We like to hear the words: math, physics, AI, intelligent harware and sensors, hybrid.
 			</div>
