--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 		<div class="ui hidden divider"></div>
 		<div class="ui left aligent text container">
 			The icslab.eu team focuses its energy on being creative and innovative in its field 
-			while harnasing and embracing new technologies and producing the smallest footprints on the environment.
+			while harnessing and embracing new technologies and producing the smallest footprints on the environment.
 			We like to hear the words: math, physics, AI, intelligent hardware and sensors, hybrid.
 			</div>
 			
