adding new endevour: Codo

--- a/index.html
+++ b/index.html
@@ -191,6 +191,59 @@
 		</h3>
 
         <!-- section content -->
+        <!-- :CODO APP: https://play.google.com/store/apps/details?id=eu.icslab.gherega.alex.codo -->
+		<div class="ui secondary vertical center aligned segment">
+	    	<div class="ui grid">
+				<div class="right aligned four wide column">
+					<!-- codo slide show -->
+					<div class="ui slide masked reveal small bordered image">	
+						<img class="ui small image visible content" src="images/codo-forever-in-love.png">	
+						<div class="ui slide masked reveal small bordered image hidden content">				
+							<img class="ui small image visible content" src="images/codo-checked-items.png">
+							<img class="ui small image hidden content" src="images/codo-todo-details.png">
+						</div>
+					</div>
+			    </div>
+			        
+				<div class="left aligned ten wide column">
+					<div class="ui card lilly">
+						<!-- moneyspenk description -->
+						<div class="content">
+							<div class="header">
+								<img class="ui mini image floated left" src="images/codo-logo.png">
+								<h2>Colored todo</h2>
+							</div>
+								<div class="meta">
+									<span class="category">A brain training exercise and a self-organizing tool</span>
+								</div>
+								<div class="description">
+									<p>Even if you are a person who just enjoys playing with teasers or one of those persons
+									dependent on self-organizing via todo-lists this app covers you all.
+									The Codo app is a cool and fun way to train your associative memory while keeping you in check with your
+									todo-item tasks.
+									The most important thing is to allow yourself to experiment and play with it. Trust me, you can't break it! One screen, some visual widgets and the basic touchscreen actions: touch & long touch.</p>
+									<p>Happy braining :)</p>
+								</div>
+							</div>
+						<div class="extra content">
+							
+							<div class="right floated author">
+								<!-- external links -->
+								<button class="ui facebook icon button disabled"
+	                                    onclick="location.href='https://www.facebook.com/MoneySpenk/';">
+	                                <i class="large facebook icon"></i>
+								</button>
+								<button class="ui primary android icon button"
+	                                    onclick="location.href='https://play.google.com/store/apps/details?id=eu.icslab.gherega.alex.codo';">
+	                                <i class="large android icon"></i>
+								</button>
+							</div>
+						</div>
+					</a>
+				</div>
+			</div>
+		</div>
+		
         <!-- :MONEY-SPENk APP: https://play.google.com/store/apps/details?id=com.harbinger.expressive.espendingtracker -->
 		<div class="ui secondary vertical center aligned segment">
 	    	<div class="ui grid">
