added license & terms of use; changed email to gmail

--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
 			<div class="three wide column">
 			  <h4 class="ui inverted header">Contact us</h4>
 			  <div class="ui inverted link list">
-				<a href="mailto:crew@icslab.eu" class="item">Email</a>
+				<a href="mailto:icslabcrew@gmail.com" class="item">Email</a>
 				<a href="skype:georgi_mania?call" class="item">Skype</a>
 				<a href="tel:+40746315293" class="item">Phone</a>
 			  </div>
