--- a/legal/moneyspenk-legal-terms.html
+++ b/legal/moneyspenk-legal-terms.html
@@ -56,16 +56,16 @@
 <div class="pusher">  
 		      
 	<!-- header area -->
-	<div class="ui secondary inverted vertical center stackable aligned segment">
+	<div class="ui secondary inverted center stackable aligned segment">
         <div class="ui left aligned grid">
             <div class="column">
                 <a href="https://play.google.com/store/apps/details?id=com.harbinger.expressive.espendingtracker"
-                   class="ui mini image floated right">
+                   class="ui large image floated right">
                     <img src="../images/moneyspenk-logo.png">
                </a>
             </div>
             <div class="left aligned column">
-                <h3>MoneySpenk</h3>
+                <h2>MoneySpenk</h2>
             </div>
         </div>
 	</div><!-- (end header) -->
