try medium size

--- a/legal/codo-legal-terms.html
+++ b/legal/codo-legal-terms.html
@@ -60,7 +60,7 @@
         <div class="ui left aligned grid">
             <div class="column">
                 <a href="https://play.google.com/store/apps/details?id=eu.icslab.gherega.alex.codo"
-                   class="ui large image floated right">
+                   class="ui medium image floated right">
                     <img src="../images/codo-logo.png">
                </a>
             </div>
