--- a/legal/moneyspenk-legal-terms.html
+++ b/legal/moneyspenk-legal-terms.html
@@ -60,7 +60,7 @@
         <div class="ui left aligned grid">
             <div class="column">
                 <a href="https://play.google.com/store/apps/details?id=com.harbinger.expressive.espendingtracker"
-                   class="ui large image floated right">
+                   class="ui medium image floated right">
                     <img src="../images/moneyspenk-logo.png">
                </a>
             </div>
