--- a/legal/moneyspenk-legal-terms.html
+++ b/legal/moneyspenk-legal-terms.html
@@ -59,10 +59,9 @@
 	<div class="ui secondary inverted center stackable aligned segment">
         <div class="ui left aligned grid">
             <div class="column">
-                <a href="https://play.google.com/store/apps/details?id=com.harbinger.expressive.espendingtracker"
-                   class="ui medium image">
+                <div class="ui small image">
                     <img src="../images/moneyspenk-logo.png">
-               </a>
+                </div>
             </div>
             <div class="left aligned column">
                 <h2>MoneySpenk</h2>
