--- a/index.html
+++ b/index.html
@@ -376,8 +376,8 @@
 								</div>
 								<div class="description">
 									<p>Demo of interconnecting technologies to respond to a simple need in e-Health.
-									We've used a WebRTC based API for streaming video and audio signal, apllied some cool strategies and we've researched the tech stack needed for the final result.
-									There are two dedicated app for the patient and the health care taker - we've affectionatelly called them toddler and nanny. All backed by a cool Clojure based server.
+									We've used a WebRTC based API for streaming video and audio signal, applied some cool strategies and we've researched the tech stack needed for the final result.
+									There are two dedicated app for the patient and the health care taker - we've affectionately called them toddler and nanny. All backed by a cool Clojure based server.
 									</p>
 								</div>
 							</div>
