correct logo link

--- a/index.html
+++ b/index.html
@@ -192,12 +192,12 @@
         <div class="ui middle aligned grid">
             <div class="eight wide column">
                 <a href="http://juxt.pro">
-                    <img class="ui centered small image" src="/images/collaborators/juxt.png">
+                    <img class="ui centered small image" src="/images/partners/juxt.png">
                 </a>
             </div>
             <div class="eight wide column">
                 <a href="http://intrinsicagility.com.au/">
-                    <img class="ui centered small image" src="/images/collaborators/intrinic.jpg">
+                    <img class="ui centered small image" src="/images/partners/intrinic.jpg">
                 </a>
             </div>
         </div>
