--- a/peek-at-clojure.html
+++ b/peek-at-clojure.html
@@ -37,6 +37,9 @@
     <img src="http://is1.mzstatic.com/image/thumb/Purple122/v4/43/18/51/43185154-2c62-50b3-a650-75f819cbe819/source/175x175bb.png" alt="" width="32" height="32" align="center"/> slack channel</a>
 <p><a href="https://github.com/alex-gherega/peek-at-clojure">
     <img src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-256.png" alt="" width="32" height="32" align="center"/> basic repository</a></p>
+<p><a href="peek-at-clojure-transcript.pdf">
+    <img src="https://cdn4.iconfinder.com/data/icons/48-bubbles/48/12.File-512.png" alt="" width="32" height="32" align="center"/> transcript</a></p>
+
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
