remove JS from covered languages

--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
                 <img class="ui image" src="images/technologies/python.png">
                 <img class="ui image" src="images/technologies/java.png">
                 <img class="ui image" src="images/technologies/android.png">
-                <img class="ui image" src="images/technologies/js.png">
+                <!--<img class="ui image" src="images/technologies/js.png">-->
                 <img class="ui image" src="images/technologies/css.png">
             </div>
           </div>
