--- a/index.html
+++ b/index.html
@@ -517,17 +517,23 @@
 				<i class="mail icon"></i>
 				Email
 			</button>
-			<button class="ui skype tiny icon button"
-					title="Skype call"
-					onclick="location.href='skype:georgi_mania?call';">
-				<i class="skype icon"></i>
-				Skype
-			</button>
             <button class="ui facebook tiny icon button"
 					title="Facebook page"
 					onclick="location.href='http://www.facebook.com/icslab.eu';">
 				<i class="facebook icon"></i>
 				Facebook
+			</button>
+            <button class="ui skype tiny icon button"
+					title="Skype call"
+					onclick="location.href='skype:georgi_mania?call';">
+				<i class="skype icon"></i>
+				Skype
+			</button>
+            <button class="ui slack tiny icon button"
+					title="Slack channel"
+					onclick="location.href='/slack';">
+				<img src="images/slack.png" width="10px" height="auto"></image>
+				Slack
 			</button>
 		   <button class="ui phone tiny icon button"
 					title="Call +40746315293"
@@ -679,6 +685,15 @@
                         <a class="ui item"
                             href="skype:georgi_mania?call"
                             target="_blank">icslab crew</a>
+                    </span>
+                </div>
+                  
+                <div>
+                    <span>
+                        <i class="slack icon"></i>
+                        <a class="ui item"
+                            href="/slack"
+                            target="_blank">slack channel</a>
                     </span>
                 </div>
                   
